--- a/longestRun/test.html
+++ b/longestRun/test.html
@@ -13,7 +13,10 @@
 var longestRun = function(string) {
   var prevCount = 0;
   var currCount = 0;
-  var hold = [];
+  var hold = {
+    char: '',
+    length: ''
+  };
 
   if (string.length === 0) {
     return [0, 0];
@@ -23,24 +26,27 @@ var longestRun = function(string) {
         currCount++;
 
       } else {
-        if (currCount > prevCount) {
 
-          hold.push({
-            length: currCount,
-            char: string[i]
-          })
+
+        if (currCount > prevCount) {
+          hold['length'] = currCount;
+          hold['char'] = string[i];
           prevCount = currCount;
           currCount = 0;
 
+        } else {
+
+
+          currCount = 0;
         }
       }
     };
 
-    if (hold.length > 0) {
-      var last = hold.shift();
+    if (hold['char'] !== '') {
+      // var last = hold.shift();
       var holdd = [];
-      holdd.push(string.indexOf(last['char']));
-      var sum = last['length'] + string.indexOf(last['char']);
+      holdd.push(string.indexOf(hold['char']));
+      var sum = hold['length'] + string.indexOf(hold['char']);
       holdd.push(sum);
 
       return holdd;
@@ -55,5 +61,5 @@ var longestRun = function(string) {
 };
 
 
-console.log(longestRun("abcdefgh"))
+console.log(longestRun("mississippi"))
 </script>
