--- a/binarySearchArray/test.html
+++ b/binarySearchArray/test.html
@@ -12,22 +12,21 @@
 <script type="text/javascript">
 var binarySearch = function(array, target) {
   var count = 0;
-  var half = function(argument) {
-    Math.floor(array.length / 2)
-  }
-
-
-
+  var calHalf = Math.floor(array.length / 2)
+  var half = calHalf + count
+  console.log(half)
   var firstHalf = array.slice(0, half)
   var secHalf = array.slice(half)
 
   if (target === secHalf[0]) {
     return half
   } else if (target > secHalf[0]) {
-    binarySearch(secHalf, target)
-  } else {
+    count++
 
-    binarySearch(firstHalf, target)
+    binarySearch(secHalf, target);
+  } else {
+    count--
+    binarySearch(firstHalf, target);
   }
 
 
@@ -35,5 +34,5 @@ var binarySearch = function(array, target) {
 };
 
 
-console.log(binarySearch([1, 3, 4, 6, 8, 9, 11], 6))
+console.log(binarySearch([1, 3, 4, 6, 8, 9, 11], 11))
 </script>
