--- a/rotatedArraySearch/rotatedArraySearch.html
+++ b/rotatedArraySearch/rotatedArraySearch.html
@@ -12,11 +12,18 @@
 <script type="text/javascript">
 function rotatedArraySearch(rotated, target) {
 
+
   var half = Math.floor(rotated.length / 2)
 
   if (rotated[0] > target) {
+    if (rotated[half] === target){
+      return half; 
+    }else{
+    }
 
-    rotated[half]
+  }else{
+
+    if()
   }
 
 }
