reverse linked list

--- a/reverseLinkedList/reverseLinkedList.html
+++ b/reverseLinkedList/reverseLinkedList.html
@@ -1,10 +1,58 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title></title>
+  <title></title>
 </head>
+
 <body>
+  <script type="text/javascript">
+  var reverseLinkedList = function(linkedlist) {
+    var node = linkedlist;
+    var previous = null;
+    while (node) {
+      // save next or you lose it!!!
+      var save = node.next;
+      // reverse pointer
+      node.next = previous;
+      // increment previous to current node
+      previous = node;
+      // increment node to next node or null at end of list
+      node = save;
+    }
+    return previous; // Change the list head !!!
+  }
+
+  linkedlist = reverseLinkedList(linkedlist);
 
 
+
+  function reverseList(root) { 
+   var currNode = root, prevNode = temp = null;
+   
+   while(currNode != null) {
+      temp = currNode.next;
+      currNode.next = prevNode;
+      prevNode = currNode;
+      currNode = temp;  
+   }
+   return prevNode ;
+}
+
+function reverseSingly(head) {
+  var prev;
+  while (head.next) {
+    var next = head.next;
+    head.next = prev;
+    prev = head;
+    head = next;
+  }
+  head.next = prev;
+  return head;
+}
+
+
+  </script>
 </body>
+
 </html>
