--- a/timeCounter/timer.html
+++ b/timeCounter/timer.html
@@ -6,5 +6,15 @@
 <body>
 <input>mins</input>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
+<script type="text/javascript">
+	var time = $(input).val()
+	var click = $(input).click(function  () {
+		console.log('hello');
+	})
+	console.log(time)
+
+
+
+</script>
 </body>
 </html>
