--- a/timeCounter/timer.html
+++ b/timeCounter/timer.html
@@ -9,7 +9,9 @@
 <script type="text/javascript">
 	var time = $(input).val()
 	var click = $(input).click(function  () {
-		console.log('hello');
+		var counter = 0;
+		counter++;
+		
 	})
 	console.log(time)
 
