--- a/mergeSort/mergeSort.html
+++ b/mergeSort/mergeSort.html
@@ -10,10 +10,21 @@
   var mergeSort = function(array) {
     var splitArray = [];
     for (var i = 0; i < array.length; i++) {
-      splitArray.push(array.slice(i, i+1))
+      splitArray.push(array.slice(i, i + 1))
+    }
+    var concatArr = [];
+    for (var n = 0; n < splitArray.length; n = n + 2) {
+      if (splitArray[n] < splitArray[n + 1]) {
+        concatArr.push(splitArray[n].concat(splitArray[n + 1]))
+      } else if (!splitArray[n + 1]) {
+        concatArr.push(splitArray[n])
+      } else {
+        concatArr.push(splitArray[n + 1].concat(splitArray[n]))
+      }
+
     }
 
-    return splitArray
+    return concatArr.length;
   };
 
   console.log(mergeSort([4, 7, 4, 3, 9, 1, 2]))
