--- a/mergeSort/mergeSort.html
+++ b/mergeSort/mergeSort.html
@@ -15,23 +15,26 @@
 
     var mSort = function(arr) {
       var concatArr = [];
-      for (var n = 0; n < splitArray.length; n = n + 2) {
-        if (splitArray[n] < splitArray[n + 1]) {
-          concatArr.push(splitArray[n].concat(splitArray[n + 1]))
-        } else if (!splitArray[n + 1]) {
-          concatArr.push(splitArray[n])
+      for (var n = 0; n < arr.length; n = n + 2) {
+        if (arr[n] < arr[n + 1]) {
+          concatArr.push(arr[n].concat(arr[n + 1]))
+        } else if (!arr[n + 1]) {
+          concatArr.push(arr[n])
         } else {
-          concatArr.push(splitArray[n + 1].concat(splitArray[n]))
+          concatArr.push(arr[n + 1].concat(arr[n]))
         }
 
       }
       if (concatArr.length !== array.length) {
+      	debugger;
         mSort(concatArr)
       } else {
         return concatArr;
       }
 
     }
+
+    mSort(splitArray);
 
 
   };
