--- a/mergeSort/mergeSort.html
+++ b/mergeSort/mergeSort.html
@@ -7,37 +7,34 @@
 
 <body>
   <script type="text/javascript">
-  var mergeSort = function(array) {
-    var splitArray = [];
-    for (var i = 0; i < array.length; i++) {
-      splitArray.push(array.slice(i, i + 1))
-    }
+  function merge(left, right) {
+    var i = 0;
+    var j = 0;
+    var results = [];
 
-    var mSort = function(arr) {
-      var concatArr = [];
-      for (var n = 0; n < arr.length; n = n + 2) {
-        if (arr[n] < arr[n + 1]) {
-          concatArr.push(arr[n].concat(arr[n + 1]))
-        } else if (!arr[n + 1]) {
-          concatArr.push(arr[n])
-        } else {
-          concatArr.push(arr[n + 1].concat(arr[n]))
-        }
-
-      }
-      if (concatArr.length !== array.length) {
-      	debugger;
-        mSort(concatArr)
+    while (i < left.length && j < right.length) {
+      if (left[i] < right[j]) {
+        results.push(left[i++]);
       } else {
-        return concatArr;
+        results.push(right[j++]);
       }
-
     }
 
-    mSort(splitArray);
+    var remaining = i === left.length ? right.slice(j) : left.slice(i);
+    return results.concat(remaining)
+  }
 
+  function mergeSort(arr) {
+    if (arr.length < 2) {
+      return arr;
+    }
 
-  };
+    var middle = Math.floor(arr.length / 2);
+    var left = arr.slice(0, middle);
+    var right = arr.slice(middle);
+
+    return merge(mergeSort(left), mergeSort(right));
+  }
 
   console.log(mergeSort([4, 7, 4, 3, 9, 1, 2]))
   </script>
