--- a/mergeSort/mergeSort.html
+++ b/mergeSort/mergeSort.html
@@ -37,6 +37,53 @@
   }
 
   console.log(mergeSort([4, 7, 4, 3, 9, 1, 2]))
+
+
+
+
+  // or
+
+
+  var merge = function(left, right) {
+    var merged = [];
+    var iL = 0,
+      iR = 0;
+    while (merged.length < left.length + right.length) {
+      if (iR >= right.length || left[iL] <= right[iR]) {
+        merged.push(left[iL]);
+        iL += 1;
+      } else {
+        merged.push(right[iR]);
+        iR += 1;
+      }
+    }
+    return merged;
+  }
+
+  var mergeSort = function(array) {
+    var lists = [];
+    var currentList = [];
+    lists = []
+    for (var i = 0; i < array.length; i++) {
+      if (currentList.length && array[i] < currentList[currentList.length - 1]) {
+        lists.push(currentList);
+        currentList = [];
+      }
+      currentList.push(array[i]);
+    }
+    lists.push(currentList);
+    while (lists.length > 1) {
+      var newLists = [];
+      for (var i = 0; i < Math.floor(lists.length / 2); i++) {
+        newLists.push(merge(lists[i * 2], lists[i * 2 + 1]))
+      }
+      if (lists.length % 2) {
+        newLists.push(lists[lists.length - 1]);
+      }
+      lists = newLists;
+    }
+    return lists[0];
+  };
   </script>
 </body>
 
