--- a/timeCounter/timer.html
+++ b/timeCounter/timer.html
@@ -4,19 +4,19 @@
 	<title></title>
 </head>
 <body>
-<input>mins</input>
+
+<form>
+  mins: <input></input><br>
+
+  <input type="submit" value="Submit">
+</form>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 <script type="text/javascript">
-	var time = $(input).val()
-	var click = $(input).click(function  () {
-		var counter = 0;
-		counter++;
-		
-	})
-	click();
 
-	console.log()
 
+$("form").submit(function() {
+console.log($('input').val());
+});
 
 
 </script>
