--- a/timeCounter/timer.html
+++ b/timeCounter/timer.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title></title>
+  <title></title>
 </head>
+
 <body>
+  <form>
+    mins:
+    <input></input>
+    <br>
+    <button>submit</button>
+  </form>
+  <span id="timer"></span>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
+  <script type="text/javascript">
+  var count=4;
 
-<form>
-  mins: <input></input><br>
+var counter=setInterval(timer, 1000);
 
-  <input type="submit" value="Submit">
-</form>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
-<script type="text/javascript">
+  function timer() {
+    count = count - 1;
+    if (count <= 0) {
+      clearInterval(counter);
+      return;
+    }
 
-
-$("form").submit(function() {
-console.log($('input').val());
-});
-
-
-</script>
+    document.getElementById("timer").innerHTML = count + " secs"; // watch for spelling
+  }
+  </script>
 </body>
+
 </html>
