--- a/timeCounter/timer.html
+++ b/timeCounter/timer.html
@@ -13,6 +13,12 @@
     <button>submit</button>
   </form>
   <span id="timer"></span>
+
+  <div id="t" class="badge">00:00</div>
+
+
+<button id="btn">Start</button>
+
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
   <script type="text/javascript">
   $('button').click(function() {
@@ -35,7 +41,7 @@
       document.getElementById("timer").innerHTML = count + " secs"; // watch for spelling
     }
 
-    
+
   </script>
 </body>
 
