--- a/TelephoneWords/telephoneWords.html
+++ b/TelephoneWords/telephoneWords.html
@@ -7,7 +7,7 @@
 
 <body>
     <script type="text/javascript">
-    var num = {
+    var letters = {
         0: '0',
         1: '1',
         2: 'ABC',
@@ -35,7 +35,7 @@
         }
         return possibilities;
     }
-    console.log(telephoneWords("1123"))
+    console.log(telephoneWords("6723"))
     </script>
 </body>
 
