--- a/primeTester/primeTester.html
+++ b/primeTester/primeTester.html
@@ -5,7 +5,14 @@
 </head>
 <body>
 <script type="text/javascript">
-	
+	var primeTester = function (num){
+
+if (num % num-1 === 0){
+	return false
+}
+
+
+	}
 </script>
 </body>
 </html>
