--- a/primeTester/primeTester.html
+++ b/primeTester/primeTester.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title></title>
+    <title></title>
 </head>
+
 <body>
-<script type="text/javascript">
-	var primeTester = function (num){
-
-if (num % num-1 === 0){
-	return false
-}
-
-
-	}
-</script>
+    <script type="text/javascript">
+    var primeTester = function(num) {
+ 	if (num % num -1 === 0){
+ 		return false
+ 	}
+ 	return true
+    }
+    primeTester(5);
+    </script>
 </body>
+
 </html>
