--- a/primeTester/primeTester.html
+++ b/primeTester/primeTester.html
@@ -8,12 +8,20 @@
 <body>
     <script type="text/javascript">
     var primeTester = function(num) {
- 	if (num % num -1 === 0){
- 		return false
- 	}
- 	return true
+        if (num % 2 === 0){
+        	return false;
+        } else if (num % num -2 === 0){
+        	return false;
+        } else{
+        	primeTester(num -2)
+        }
+
+        if (num < 2){
+        	return true;
+        }
+
     }
-    primeTester(5);
+   console.log(primeTester(5)) 
     </script>
 </body>
 
