--- a/primeTester/primeTester.html
+++ b/primeTester/primeTester.html
@@ -8,16 +8,24 @@
 <body>
     <script type="text/javascript">
     var primeTester = function(num) {
-        if (num % 2 === 0 || num % num - 2 === 0) {
-            return false;
-        } else if (num < 2) {
-            return true;
-        } else {
-            primeTester(num - 2)
-        }
-    }
 
-    console.log(primeTester(7))
+        if (num === 2) {
+            return true;
+        }
+
+        if (num % 2 === 0 || num % num - 2 === 0 || num === 1) {
+            return false;
+        }
+
+        for (var i = 3; i <= Math.sqrt(num); i += 2) {
+            if (num % i === 0) {
+                return false;
+            }
+
+        }
+        return true
+    }
+    console.log(primeTester(1629383838))
     </script>
 </body>
 
