--- a/primeTester/primeTester.html
+++ b/primeTester/primeTester.html
@@ -20,6 +20,7 @@
         for (var i = 3; i <= Math.sqrt(num); i += 2) {
             if (num % i === 0) {
                 return false;
+                djf
             }
 
         }
