--- a/sumArray/sumArray.html
+++ b/sumArray/sumArray.html
@@ -11,6 +11,11 @@ array:
 array:
 [ 1, 2, 3, -6, 4, 5, 6 ]	15
 
+var arr = [1, 2, 3];
+var max = Math.max(...arr);
+
+
+
  -->
 <!DOCTYPE html>
 <html>
