--- a/sumArray/sumArray.html
+++ b/sumArray/sumArray.html
@@ -1,15 +1,15 @@
 <!-- Given an array of numbers, calculate the greatest contiguous sum of numbers in it. A single array item will count as a contiguous sum.
 
 
-Input	                 Output
+Input                    Output
 array:
-[ 1, 2, 3 ]	                6
+[ 1, 2, 3 ]                 6
 array:
-[ 4, -1, 5 ]	            8
+[ 4, -1, 5 ]                8
 array:
-[ 10, -11, 11 ]	            11
+[ 10, -11, 11 ]             11
 array:
-[ 1, 2, 3, -6, 4, 5, 6 ]	15
+[ 1, 2, 3, -6, 4, 5, 6 ]    15
 
 [1,2,3,-4,5,-4,5,-4,-4]    8
 
@@ -29,18 +29,18 @@ var max = Math.max(...arr);
 <body>
     <script type="text/javascript">
     function sumArray(array) {
-        var sum = 0;
-        for (i = 0; i < array.length; i++) {
-            sum = sum + array[i]
+        var max;
+        var holding = 0;
+        for (var x = 0; x < array.length; x++) {
+            holding += array[x];
+            if (holding > max || max === undefined) {
+                max = holding;
+            }
+            if (holding < 0) {
+                holding = 0;
+            }
         }
-        var max = Math.max(...array);
-
-        if (sum < max) {
-            return max
-        } else {
-            return sum
-        }
-
+        return max;
 
     }
     </script>
