--- a/longestPalindrome/LongestPalindrome.html
+++ b/longestPalindrome/LongestPalindrome.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-Longest Palindrome
+<div>Longest Palindrome
 Implement a function that finds the longest palindrome in a given string. For example, in the string “My dad is a racecar athlete”, the longest palindrome is “a racecar a”. Count whitespaces as valid characters. Other palindromes in the above string include “dad”, “ete”, “ dad “ (including whitespace on each side of dad).
 
 Examples
@@ -13,7 +13,16 @@ string:
 "aibohphobia"	"aibohphobia"
 string:
 "My dad is a racecar athlete"	"a racecar a"
+</div>
+<script type="text/javascript">
+	var longest = function (str) {
+		if (str[0] === str [str.length -1]){
+			return str;
+		}
+	};
 
 
+	console.log(longest("aibohphobia"))
+</script>
 </body>
 </html>
