--- a/reverseLinkedList/reverseLinkedList.html
+++ b/reverseLinkedList/reverseLinkedList.html
@@ -2,57 +2,71 @@
 <html>
 
 <head>
-  <title></title>
+    <title></title>
 </head>
 
 <body>
-  <script type="text/javascript">
-  var reverseLinkedList = function(linkedlist) {
-    var node = linkedlist;
-    var previous = null;
-    while (node) {
-      // save next or you lose it!!!
-      var save = node.next;
-      // reverse pointer
-      node.next = previous;
-      // increment previous to current node
-      previous = node;
-      // increment node to next node or null at end of list
-      node = save;
+    <script type="text/javascript">
+    var reverseLinkedList = function(linkedlist) {
+        var node = linkedlist;
+        var previous = null;
+        while (node) {
+            // save next or you lose it!!!
+            var save = node.next;
+            // reverse pointer
+            node.next = previous;
+            // increment previous to current node
+            previous = node;
+            // increment node to next node or null at end of list
+            node = save;
+        }
+        return previous; // Change the list head !!!
     }
-    return previous; // Change the list head !!!
-  }
 
-  linkedlist = reverseLinkedList(linkedlist);
+    linkedlist = reverseLinkedList(linkedlist);
 
 
 
-  function reverseList(root) { 
-   var currNode = root, prevNode = temp = null;
-   
-   while(currNode != null) {
-      temp = currNode.next;
-      currNode.next = prevNode;
-      prevNode = currNode;
-      currNode = temp;  
-   }
-   return prevNode ;
-}
+    var reverseList = function(head) {
+        var cur = head,
+            next;
 
-function reverseSingly(head) {
-  var prev;
-  while (head.next) {
-    var next = head.next;
-    head.next = prev;
-    prev = head;
-    head = next;
-  }
-  head.next = prev;
-  return head;
-}
+        head = null;
 
+        while (cur) {
+            next = cur.next;
+            cur.next = head;
 
-  </script>
+            if (next) {
+                head = cur;
+                cur = next;
+            } else {
+                return cur;
+            }
+        }
+
+        return null;
+    };
+
+    // recursive
+
+    var reverseList = function(head) {
+        if (!head) {
+            return null;
+        }
+
+        if (!head.next) {
+            return head;
+        }
+
+        var newHead = reverseList(head.next);
+
+        head.next.next = head;
+        head.next = null;
+
+        return newHead;
+    };
+    </script>
 </body>
 
 </html>
