--- a/reverseLinkedList/reverseLinkedList.html
+++ b/reverseLinkedList/reverseLinkedList.html
@@ -26,6 +26,14 @@
     linkedlist = reverseLinkedList(linkedlist);
 
 
+    /**
+     * Definition for singly-linked list.
+     * function ListNode(val) {
+     *     this.val = val;
+     *     this.next = null;
+     * }
+     */
+
 
     var reverseList = function(head) {
         var cur = head,
