--- a/longestSubstring/longestSub.html
+++ b/longestSubstring/longestSub.html
@@ -1,9 +1,9 @@
 <!-- Find a solution to get the longest substring which contains m distinct characters
 Examples:
 
-longestSubstring(“hello worlld”, 2)  ->  “ell”
-longestSubstring(“ccabbaabaaadaaaa”, 2)  -> “abbaabaaa”
-longestSubstring(“ccabaabaaad”, 3) -> “ccabaabaaa” -->
+longestSubstring('hello worlld', 2)  ->  'ell'
+longestSubstring('ccabbaabaaadaaaa', 2)  -> 'abbaabaaa'
+longestSubstring('ccabaabaaad', 3) -> 'ccabaabaaa' -->
 <!DOCTYPE html>
 <html>
 
