--- a/longestPalindrome/LongestPalindrome.html
+++ b/longestPalindrome/LongestPalindrome.html
@@ -1,28 +1,52 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title></title>
+    <title></title>
 </head>
+
 <body>
-<div>Longest Palindrome
-Implement a function that finds the longest palindrome in a given string. For example, in the string “My dad is a racecar athlete”, the longest palindrome is “a racecar a”. Count whitespaces as valid characters. Other palindromes in the above string include “dad”, “ete”, “ dad “ (including whitespace on each side of dad).
-
-Examples
-Input	Output
-string:
-"aibohphobia"	"aibohphobia"
-string:
-"My dad is a racecar athlete"	"a racecar a"
-</div>
-<script type="text/javascript">
-	var longest = function (str) {
-		if (str[0] === str [str.length -1]){
-			return str;
-		}
-	};
+    <div>Longest Palindrome Implement a function that finds the longest palindrome in a given stringing. For example, in the stringing “My dad is a racecar athlete”, the longest palindrome is “a racecar a”. Count whitespaces as valid characters. Other palindromes in the above string include “dad”, “ete”, “ dad “ (including whitespace on each side of dad). Examples Input Output string: "aibohphobia" "aibohphobia" string: "My dad is a racecar athlete" "a racecar a"
+    </div>
+    <script type="text/javascript">
+    function isPalindrome(s) {
+        var rev = s.split("").reverse().join("");
+        return s == rev;
+    }
 
 
-	console.log(longest("aibohphobia"))
-</script>
+    var longest = function(string) {
+        var long = '';
+        var curL = '';
+        for (var i = 0; i < string.length; i++) {
+            curL = string[i]
+            for (var j = i + 1; j < string.length; j++) {
+                if (string[i] !== string[j]) {
+                    curL += string[j]
+                } else if (string[i] === string[j]) {
+                    curL += string[j]
+                    if (curL.length > long.length && isPalindrome(curL)) {
+
+
+                        long = curL
+                    }
+
+                }
+
+
+
+
+            }
+        }
+
+
+        return long;
+
+    };
+
+
+    console.log(longest("aibohphobia"))
+    </script>
 </body>
+
 </html>
